# Muster

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
scripts/: _bootstrap.py  evaluate.py  generate_dataset.py  plot_stealth_curve.py  run_scenario.py
src/muster/: __init__.py  agents.py  baselines.py  cli.py  datagen.py  defense.py  evaluate.py  graph.py  injection.py  llm.py  scoring.py  state.py  teammate_model.py  text.py
tests/: test_detection.py  test_environment.py
